tooltips for LD creation and edition

--- a/client/views/partials/ld.html
+++ b/client/views/partials/ld.html
@@ -72,14 +72,15 @@
         </div>
         -->
         <div class="clearfix"></div>
+        <!-- Hide button until implementation
         <div id="model">
-            <!-- FIXME: add a dynamic link to use the LD as a model -->
+            FIXME: add a dynamic link to use the LD as a model
             <a href="#">
                 <img src="../../img/model.png" class="btnModelImg">
                 <h5 class="btnModel">USA PROGETTO COME MODELLO</h5>
             </a>
         </div>
-        
+        -->
         <!-- FIXME: Only show the edit link when user is owner of current LD -->
         <div>
           <a id="editLdLink" ng-href="/ldedit/{{learningDesign.ld_id}}">
