--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -27,8 +27,11 @@
         </div>
 
         <!-- Topics -->
-        <div id="editTopics" class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-map-marker"></i>
-            Argomenti:</h5>
+        <div id="editTopics" class="clear marginTopSidebar">
+            <!-- INSERT INTO H5 BELOW TO ADD TOPICS TOOLTIP
+            tooltip="Scrivi uno o più argomenti del progetto, ad esempio: articoli, presentarsi, i saluti, ecc. Per inserirli, premi dopo ogni argomento 'Invio' o il bottone '+' a destra." tooltip-trigger="mouseenter" tooltip-placement="top"
+            -->
+            <h5 class="zeroMargin" ><i class="icon-map-marker"></i> Argomenti:</h5>
 
             <form novalidate class="sidebarForm" name="LdTopicForm">
                 <div class="errorBoxSidebar">
@@ -40,9 +43,9 @@
                        typeahead="suggestion for suggestion in getSubjects($viewValue)"
                        typeahead-on-select="addTopic()"
                        ui-keypress="{13:'addTopic()'}"
-                       placeholder="argomenti..." required ng-maxlength="255"
+                       required ng-maxlength="255"
                        ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
-                <span id="addTopicIcon" class="editButton" ng-click="addTopic()"><i
+                <span id="addTopicIcon" class="editButton" ng-click="addTopic()" tooltip="Clicca qui per aggiungere un argomento." tooltip-trigger="mouseenter" tooltip-placement="right"><i
                         class="icon-plus icon-white"></i></span>
                 <span class="multiValueSidebar">Puoi inserire più di un valore</span>
 
@@ -50,7 +53,7 @@
                     <ul ng-repeat="topic in selectedTopics" class="zeroMargin subjects">
                         <li class="sidebarEditItem">
 	                	<span class="sidebarEditItemLink">{{topic}} 
-	                	<a ng-click="removeTopic(topic)" class="hand"><i class="icon-remove-circle"></i> </a></span>
+	                	<a ng-click="removeTopic(topic)" class="hand" tooltip="Clicca qui per cancellare questo argomento." tooltip-trigger="mouseenter" tooltip-placement="right"><i class="icon-remove-circle" ></i> </a></span>
                         </li>
                     </ul>
                 </div>
@@ -58,72 +61,78 @@
         </div>
 
         <!-- Objectives -->
-        <div id="editObjectives" class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-screenshot"></i>
-            Obiettivi:</h5>
+        <div id="editObjectives" class="clear marginTopSidebar">
+            <!-- INSERT INTO H5 BELOW TO ADD TOPICS TOOLTIP
+          tooltip="Scrivi uno o più obiettivi didattici del progetto, ad esempio: gli articoli determinativi, salutare formalmente, presentare un amico, ecc. Per inserirli, premi dopo ogni obiettivo 'Invio' o il bottone '+' a destra." tooltip-trigger="mouseenter" tooltip-placement="top"
+          -->
+           <h5 class="zeroMargin" ><i class="icon-screenshot"></i> Obiettivi:</h5>
 
-            <form novalidate class="sidebarForm" name="LdObjectiveForm">
-                <div class="errorBoxSidebar">
-                  <span id="objectivePatternErr" class="errorTipSidebar"
-                          ng-show="LdObjectiveForm.ldObjective.$error.pattern">Simbolo non permesso.</span>
-                    <span id="objectiveLengthErr" class="errorTipSidebar"
-                          ng-show="LdObjectiveForm.ldObjective.$error.maxlength">Massimo 255 caratteri.</span>
-                    <span class="clearfix"></span>
-                </div>
-                <input class="sidebarInputMultiple" type="text" ng-model="ldObjective" name="ldObjective"
-                       typeahead="suggestion for suggestion in getObjectives($viewValue)"
-                       typeahead-on-select="addObjective()"
-                       ui-keypress="{13:'addObjective()'}"
-                       placeholder="obiettivi..." required ng-maxlength="255"
-                       ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
-                <span id="addObjectiveIcon" class="editButton" ng-click="addObjective()"><i
-                        class="icon-plus icon-white"></i> </span>
-                <span class="multiValueSidebar">Puoi inserire più di un valore</span>
+           <form novalidate class="sidebarForm" name="LdObjectiveForm">
+               <div class="errorBoxSidebar">
+                 <span id="objectivePatternErr" class="errorTipSidebar"
+                         ng-show="LdObjectiveForm.ldObjective.$error.pattern">Simbolo non permesso.</span>
+                   <span id="objectiveLengthErr" class="errorTipSidebar"
+                         ng-show="LdObjectiveForm.ldObjective.$error.maxlength">Massimo 255 caratteri.</span>
+                   <span class="clearfix"></span>
+               </div>
+               <input class="sidebarInputMultiple" type="text" ng-model="ldObjective" name="ldObjective"
+                      typeahead="suggestion for suggestion in getObjectives($viewValue)"
+                      typeahead-on-select="addObjective()"
+                      ui-keypress="{13:'addObjective()'}"
+                      placeholder="obiettivi..." required ng-maxlength="255"
+                      ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
+               <span id="addObjectiveIcon" class="editButton" ng-click="addObjective()"><i
+                       class="icon-plus icon-white"></i> </span>
+               <span class="multiValueSidebar">Puoi inserire più di un valore</span>
 
-                <div id="objectiveTagsEdit">
-                    <ul ng-repeat="objective in selectedObjectives" class="zeroMargin objectives">
-                        <li class="sidebarEditItem">
-	                	<span class="sidebarEditItemLink">{{objective}} 
-	                	<a ng-click="removeObjective(objective)" class="hand"><i class="icon-remove-circle"></i></a></span>
-                        </li>
-                    </ul>
-                </div>
-            </form>
-        </div>
+               <div id="objectiveTagsEdit">
+                   <ul ng-repeat="objective in selectedObjectives" class="zeroMargin objectives">
+                       <li class="sidebarEditItem">
+                       <span class="sidebarEditItemLink">{{objective}}
+                       <a ng-click="removeObjective(objective)" class="hand"><i class="icon-remove-circle"></i></a></span>
+                       </li>
+                   </ul>
+               </div>
+           </form>
+       </div>
 
-        <!-- Prerequisites -->
-        <div id="editPrerequisites" class="clear marginTopSidebar"><h5 class="zeroMargin"><i class="icon-backward"></i>
-            Prerequisiti:</h5>
+       <!-- Prerequisites -->
+        <div id="editPrerequisites" class="clear marginTopSidebar">
+            <!-- INSERT INTO H5 BELOW TO ADD TOPICS TOOLTIP
+    tooltip="Scrivi uno o più prerequisiti necessari per svolgere le attività del progetto, ad esempio: maschile e femminile dei nomi, registro formale e informale, verbi indicativo presente, ecc. Per inserirli, premi dopo ogni prerequisito 'Invio' o il bottone '+' a destra." tooltip-trigger="mouseenter" tooltip-placement="top"
+    -->
+        <h5 class="zeroMargin" ><i class="icon-backward"></i> Prerequisiti:</h5>
 
-            <form novalidate class="sidebarForm" name="LdPrereqForm">
-                <div class="errorBoxSidebar">
-                    <span id="prereqPatternErr" class="errorTipSidebar" ng-show="LdPrereqForm.ldRequisite.$error.pattern">Simbolo non permesso.</span>
-                    <span id="prereqLengthErr" class="errorTipSidebar"
-                          ng-show="LdPrereqForm.ldRequisite.$error.maxlength">Massimo 255 caratteri.</span>
-                </div>
-                <input class="sidebarInputMultiple" type="text" ng-model="ldRequisite" name="ldRequisite"
-                       typeahead="suggestion for suggestion in getObjectives($viewValue)"
-                       typeahead-on-select="addPrerequisite()"
-                       ui-keypress="{13:'addPrerequisite()'}"
-                       placeholder="prerequisiti..." required ng-maxlength="255"
-                       ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
-                <span id="addPrerequisiteIcon" class="editButton" ng-click="addPrerequisite()"><i
-                        class="icon-plus icon-white"></i> </span>
-                <span class="multiValueSidebar">Puoi inserire più di un valore</span>
+        <form novalidate class="sidebarForm" name="LdPrereqForm">
+            <div class="errorBoxSidebar">
+                <span id="prereqPatternErr" class="errorTipSidebar" ng-show="LdPrereqForm.ldRequisite.$error.pattern">Simbolo non permesso.</span>
+                <span id="prereqLengthErr" class="errorTipSidebar"
+                      ng-show="LdPrereqForm.ldRequisite.$error.maxlength">Massimo 255 caratteri.</span>
+            </div>
+            <input class="sidebarInputMultiple" type="text" ng-model="ldRequisite" name="ldRequisite"
+                   typeahead="suggestion for suggestion in getObjectives($viewValue)"
+                   typeahead-on-select="addPrerequisite()"
+                   ui-keypress="{13:'addPrerequisite()'}"
+                   placeholder="prerequisiti..." required ng-maxlength="255"
+                   ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
+            <span id="addPrerequisiteIcon" class="editButton" ng-click="addPrerequisite()"><i
+                    class="icon-plus icon-white"></i> </span>
+            <span class="multiValueSidebar">Puoi inserire più di un valore</span>
 
-                <div id="prerequisiteTagsEdit">
-                    <ul ng-repeat="prereq in selectedPrerequisites" class="zeroMargin prerequisites">
-                        <li class="sidebarEditItem">
-	                	<span class="sidebarEditItemLink">{{prereq}} 
-	                	<a ng-click="removePrerequisite(prereq)" class="hand"><i class="icon-remove-circle"></i> </a></span>
-                        </li>
-                    </ul>
-                </div>
-            </form>
-        </div>
+            <div id="prerequisiteTagsEdit">
+                <ul ng-repeat="prereq in selectedPrerequisites" class="zeroMargin prerequisites">
+                    <li class="sidebarEditItem">
+                    <span class="sidebarEditItemLink">{{prereq}}
+                    <a ng-click="removePrerequisite(prereq)" class="hand"><i class="icon-remove-circle"></i> </a></span>
+                    </li>
+                </ul>
+            </div>
+        </form>
+    </div>
 
-        <!-- LD Students Description -->
+    <!-- LD Students Description -->
         <div class="clear marginTopSidebar">
-            <h5 class="zeroMargin"><i class="icon-user"></i> Descrizione degli studenti:</h5>
+            <h5 class="zeroMargin" tooltip="Descrivi gli studenti e il contesto per al quale il progetto è destinato." tooltip-trigger="mouseenter" tooltip-placement="top"><i class="icon-user"></i> Descrizione degli studenti:</h5>
 
             <form class="sidebarForm">
                 <textarea
@@ -157,7 +166,7 @@
         <div class="clear marginTopSidebar">
 
             <!-- LD Publication -->
-            <h5 class="zeroMargin"><i class="icon-bullhorn"></i> Pubblicazione:</h5>
+            <h5 class="zeroMargin" tooltip="Premi questo bottone per scegliere se rendere pubblico il tuo progetto o mantenerlo privato." tooltip-trigger="mouseenter" tooltip-placement="top"><i class="icon-bullhorn"></i> Pubblicazione:</h5>
 
             <div class="onoffswitch">
                 <input type="checkbox"
@@ -247,7 +256,7 @@
             <div class="titleScope">
                 <form name="ScopeForm" novalidate="" class="singleForm">
                     <div id="scopeFormSection">
-                        <label class="editLabel"><i class="icon-bell icon-white"></i> Ambito:</label>
+                        <label class="editLabel" ><i class="icon-bell icon-white"></i> Ambito:</label>
                         <input class="editInputScocpe" type="text" name="ldScope"
                                ng-model="learningDesign.ld_scope"
                                typeahead="suggestion for suggestion in getScopes($viewValue)"
@@ -275,8 +284,8 @@
 
 
 <div class="tabContent">
-<div class="newActBox">
-    <button id="createActivity" type="button" class="newActButton1" href ng-click="createActivity()">
+<div>
+    <button id="createActivity" type="button" class="newActButton1" href ng-click="createActivity()" class="newActBox" tooltip="Premi questo bottone per aggiungere un'attività al progetto." tooltip-trigger="mouseenter" tooltip-placement="right">
         <i class="icon-plus icon-white"></i><br>Attività
     </button>
 
@@ -292,7 +301,7 @@
 </div>
 
 <!-- BEGIN DYNAMIC ACTIVITY CONTENT (Global View) -->
-<div ng-repeat="(level, nodes) in levels" class="levelBoxEdit">
+<div ng-repeat="(level, nodes) in levels" class="levelBoxEdit" >
     
     <!-- Level Drop Target -->
     <div id="level-{{level}}" class="lvl-target dropHorizontal dropWidth" 
@@ -300,17 +309,17 @@
 
     <!-- Every node is a Drag Source --> 
     <div id="{{node.node_id}}-{{node.type}}-{{node.level}}-{{node.position}}" ng-repeat="node in nodes"
-         x-lvl-draggable="true" ng-class="getBoxEditClass(node)">
+         x-lvl-draggable="true" ng-class="getBoxEditClass(node)" >
         
         <!-- If it's a group:  -->
-        <div ng-show="node.children" class="groupName">{{ node.node_name }}</div>
+        <div ng-show="node.children" class="groupName" >{{ node.node_name }}</div>
         <div class="clearfix"></div>
         
         <!-- TODO: add drop directives - This drop zone always has position == 1 -->
-        <div ng-show="node.children " class="leftGroupDrop"> 1</div>
+        <div ng-show="node.children " class="leftGroupDrop" > 1</div>
 
         <!-- Children are also in levels: Create unstyled div for each level -->
-        <div ng-repeat="(childLevel, subChildren) in node.children" class="levelBoxChildEdit">
+        <div ng-repeat="(childLevel, subChildren) in node.children" class="levelBoxChildEdit" tooltip="Fai un click per vedere i dettagli dell'attività o clicca e trascina per spostare l'attività in un'altra posizione." tooltip-trigger="mouseenter" tooltip-placement="right">
             <!-- TODO: add drop directives -->
             <div class="dropHorizontal">Group Level {{childLevel}}</div>
             <div ng-repeat="child in subChildren" ng-class="getGroupEditBoxClass(child)">
@@ -351,7 +360,7 @@
         <!-- End Children -->
         
         <!-- If it's NOT a group:  -->
-        <div ng-show="!node.children" class="actNameEditSingle">
+        <div ng-show="!node.children" class="actNameEditSingle" class="newActBox" tooltip="Fai un click per vedere i dettagli dell'attività o clicca e trascina per spostare l'attività in un'altra posizione." tooltip-trigger="mouseenter" tooltip-placement="right">
             
         	<!-- Left Position Drop Target -->
             <div id="levelPosition-{{level}}-{{node.position}}" class="lvl-target leftActDrop"
