--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span6 top-margin">
-    <h1 class="homeHeader">La progettazione didattica per linsegnamento dell'italiano L2/LS</h1>
+    <h1 class="homeHeader">La progettazione didattica per l'insegnamento dell'italiano L2/LS</h1>
     <p class="centered"><img src="../img/toolbox.png" class="toolbox"></p>
      <p>Ledita &egrave; un'applicazione web gratuita sviluppata per gli insegnanti di italiano come lingua seconda / straniera. L'obiettivo di LEDITA è supportare la progettazione didattica e la riflessione sulla propria pratica professionale da parte degli insegnanti, per mezzo di un semplice, rapido e intuitivo processo di design.</p>
       <p>Con Ledita, gli insegnanti possono creare progetti didattici e renderli visibili ai colleghi in tutto il mondo, per condividere esperienze educative e apprendere dal dialogo e dalla collaborazione con altri professionisti.</p>
