--- a/client/css/bootstrap.css
+++ b/client/css/bootstrap.css
@@ -5300,7 +5300,7 @@ input[type="submit"].btn.btn-mini {
   position: absolute;
   z-index: 1030;
   display: block;
-  font-size: 11px;
+  font-size: 12px;
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -5308,8 +5308,8 @@ input[type="submit"].btn.btn-mini {
 }
 
 .tooltip.in {
-  opacity: 0.8;
-  filter: alpha(opacity=80);
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 
 .tooltip.top {
@@ -5325,6 +5325,7 @@ input[type="submit"].btn.btn-mini {
 .tooltip.bottom {
   padding: 5px 0;
   margin-top: 3px;
+    margin-left: 30px;
 }
 
 .tooltip.left {
@@ -5338,7 +5339,7 @@ input[type="submit"].btn.btn-mini {
   color: #ffffff;
   text-align: center;
   text-decoration: none;
-  background-color: #000000;
+  background-color: #0099CC;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
@@ -5356,7 +5357,7 @@ input[type="submit"].btn.btn-mini {
   bottom: 0;
   left: 50%;
   margin-left: -5px;
-  border-top-color: #000000;
+  border-top-color: #0099CC;
   border-width: 5px 5px 0;
 }
 
@@ -5364,7 +5365,7 @@ input[type="submit"].btn.btn-mini {
   top: 50%;
   left: 0;
   margin-top: -5px;
-  border-right-color: #000000;
+  border-right-color: #0099CC;
   border-width: 5px 5px 5px 0;
 }
 
@@ -5372,7 +5373,7 @@ input[type="submit"].btn.btn-mini {
   top: 50%;
   right: 0;
   margin-top: -5px;
-  border-left-color: #000000;
+  border-left-color: #0099CC;
   border-width: 5px 0 5px 5px;
 }
 
@@ -5380,7 +5381,7 @@ input[type="submit"].btn.btn-mini {
   top: 0;
   left: 50%;
   margin-left: -5px;
-  border-bottom-color: #000000;
+  border-bottom-color: #0099CC;
   border-width: 0 5px 5px;
 }
 
