--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1723,6 +1723,27 @@ ul.listNode li {
 }
 
 
+.tooltip.in {
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.tooltip.in {
+    animation: hiding 5s cubic-bezier(0,0,1,1) 1;
+    -webkit-animation: hiding 5s cubic-bezier(0.8,0.1,0.7,1) 1;
+}
+
+@keyframes hiding
+{
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+@-webkit-keyframes hiding /* Safari and Chrome */
+{
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
 /* ldTable
 ===================== */
 .ldTable {
